--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "openai": "^5.22.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tavily": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
